# obj_parse_tester

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  obj_parse_tester.cpp  readme.md
libs/OpenSceneGraph-min/: Export  Math  Referenced  Vec2  Vec2f  Vec3  Vec3f  Vec4  Vec4f  obj.cpp  obj.h  ref_ptr
libs/blender/: DNA_object_types.h  MEM_guardedalloc.h
libs/blender/importer/: IO_wavefront_obj.h  obj_export_io.hh  obj_export_mtl.hh  obj_import_file_reader.cc  obj_import_file_reader.hh  obj_import_mtl.hh  obj_import_objects.hh  obj_import_string_utils.cc  obj_import_string_utils.hh  obj_importer.cc  obj_importer.hh  parser_string_utils.cc  parser_string_utils.hh
libs/blender/intern/: BLI_assert.c  leak_detector.cc  mallocn.c  mallocn_guarded_impl.c  mallocn_lockfree_impl.c  path_util.c  string.c
libs/blender/pthreads/lib/: pthreadVC3.lib
test_files/: Blender3Splash.mtl  monkey-subd6-30.mtl  monkey-subd6-nonormals.mtl  simple.mtl
